# FrowCRRd

./: .gitignore  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md
Bridge/: CMakeLists.txt  runner.cpp
Configs/: CMakeLists.txt  common_inl.hpp  config.cpp  config.hpp  config.json
Configs/CSV_files/: bottom_drag_table.csv  drogue_parachute_drag_table.csv  earth_us_standard_6p.csv  fair_drag_table.csv  main_parachute_drag_table.csv
Core/: CMakeLists.txt
Core/Physics/: consts_ind.hpp  physics.cpp  physics.hpp
Core/Simulation/: simulation.cpp  simulation.hpp
Gui/: App.tsx  EarthFlightPlot.tsx  README.md  SplashScreen.tsx  desktop-api.d.ts  index.html  package-lock.json  package.json  projectStorage.ts  styles.css  tailwind.config.cjs  translations.ts  types.ts  vite.config.ts
Gui/electron/: after-pack.cjs  dev-launch.cjs  main.cjs  preload.cjs
Gui/views/: DocsView.tsx  EditorView.tsx  ExamplesView.tsx  MainMenuView.tsx  RecentProjectsView.tsx  SettingsView.tsx  SetupView.tsx  TutorialView.tsx
Models/: CMakeLists.txt
Models/Aerodynamics/: drag_table.cpp  drag_table.hpp
Models/Atmosphere/: atmosphere.cpp  atmosphere.hpp
Models/Rocket/: parachute_sys.cpp  parachute_sys.hpp  rocket.cpp  rocket.hpp
Models/Rocket/Stage/: stage.cpp  stage.hpp
Models/Rocket/Stage/Engine/: engine.cpp  engine.hpp
Models/Rocket/Stage/Tank/: tank.cpp  tank.hpp
Tests/: CMakeLists.txt  atm_boundary_check.cpp  atm_probe.cpp  burn_sync_check.cpp  cross_section_after_pop.cpp  deep_core_audit.cpp  final_stage_behavior.cpp  parachute_active_check.cpp  parachute_ascent_probe.cpp  parachute_check.cpp  parachute_order_probe.cpp  parachute_physics_probe.cpp  run_twice_check.cpp  smoke_core.cpp  stage_sep_check.cpp  thrust_floor_probe.cpp  time_grid_probe.cpp  validation_checks.cpp
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md
scripts/: build-sim-runner.sh  build_sim_runner.ps1  clean_builds.ps1  run_massive_audit.ps1
